defined init of agent class

--- a/Problem Sets/retirement.ipynb
+++ b/Problem Sets/retirement.ipynb
@@ -10,9 +10,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.3-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python_defaultSpec_1597692474925",
+   "display_name": "Python 3.8.3 64-bit ('base': conda)"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
@@ -37,10 +41,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class agent:\n",
+    "    def __init__(self,type,age,death_age,alive,social_net,working,next_agent):\n",
+    "        self.type = type\n",
+    "        self.age = age\n",
+    "        self.death_age = death_age\n",
+    "        self.alive = alive\n",
+    "        self.social_net = social_net\n",
+    "        self.working = working\n",
+    "        self.next_agent = next_agent\n",
+    "\n",
+    "    def retirement_decision(self):\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = agent('rational',18,64,1,[4,45,4],1,23)\n"
+   ]
   }
  ]
 }
